<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/pink300"
    tools:context=".ProfileCustomer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/ActivityHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/update_det"
                android:textAlignment="center"
                android:textColor="@color/blue800"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/uProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/white"
            android:indeterminate="true"
            android:visibility="gone" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/ufullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/full_name"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray500" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <EditText
            android:id="@+id/uphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/ph_no"
            android:inputType="number"
            android:maxLength="11"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray500" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/uemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Email"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray500" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/uaddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray500" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue800"
            android:text="@string/updansave"
            android:textColor="@color/pink800"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>