<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".forgot_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:gravity="top">

        <ProgressBar
            android:id="@+id/resetProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateOnly="false"
            android:visibility="gone" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@null"
                android:contentDescription="@string/reset_pass"
                android:src="@drawable/logo2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/reset_pass"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Nhập email của bạn"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray500" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:id="@+id/btn_sendmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink300"
                android:text="@string/receive_link"
                android:textColor="@color/blue800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/btn_back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/blue800"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>